build-sys: discover the path to kexec during build time

https://bugs.freedesktop.org/show_bug.cgi?id=55248